--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,18 +8,19 @@
    "python.linting.flake8Path": "/home/gitpod/.pyenv/shims/flake8",
    "cornflakes.linter.executablePath": "/home/gitpod/.pyenv/shims/flake8",
    "files.exclude": {
-      "**/.DS_Store": true,
       "**/.git": true,
       "**/.gitp*": true,
-      "**/.hg": true,
       "**/.svn": true,
+      "**/.hg": true,
+      "**/CVS": true,
+      "**/.DS_Store": true,
       "**/.vscode": true,
       "**/core.Microsoft*": true,
       "**/core.mongo*": true,
-      "**/core.python*": true,
-      "**/CVS": true
+      "**/core.python*": true
    },
    "files.autoSave": "off",
    "workbench.colorTheme": "Visual Studio Dark",
    "editor.defaultFormatter": "HookyQR.beautify",
+   "editor.formatOnSave": true
 }
